--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     function showPrs() {
       var username = document.querySelector('.js-username').value;
       if (username) {
-        window.location = 'https://showmyprs.com/user/' + username;
+        window.location = 'http://showmyprs.com/user/' + username;
       }
     }
   </script>
