Add toolling for web assets

--- a/templates/user.html
+++ b/templates/user.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>PR's - @{{ .username }}</title>
+  <!-- build:css(dist) /assets/styles/user.css -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/user.css">
+  <!-- endbuild -->
 </head>
 <body>
   <div class="details">
