--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Show My Pr's</title>
+  <!-- build:css(dist) /assets/styles/index.css -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/index.css">
+  <!-- endbuild -->
 </head>
 <body>
   <span class="heading">Show My PR's</span>
