Add responsive meta tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Show My Pr's</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- build:css(dist) /assets/styles/index.css -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/index.css">
   <!-- endbuild -->
