--- a/templates/user.html
+++ b/templates/user.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>PR's - @{{ .username }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- build:css(dist) /assets/styles/user.css -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/user.css">
   <!-- endbuild -->
