--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,18 @@
 <body>
   <span class="heading">Show My PR's</span>
   <span class="subheading">See all your Open Source contributions in one place</span>
-  <input class="username js-username" type="text" autofocus id="username" placeholder="Enter your Github username"/>
+  <input class="username js-username" type="text" autofocus id="username" placeholder="Enter your Github username" onkeypress="handleKeypress(event)"/>
   <button class="btn btn-primary" onclick="showPrs()">Show My Pr's</button>
   <span class="madeBy">Made with ❤️ by <a href="https://twitter.com/geekykaran">geekykaran</a></span>
   <script type="text/javascript">
+    function handleKeypress(event) {
+      if (
+        event.which === 13
+        || event.keyCode === 13
+      ) {
+        showPrs();
+      }
+    }
     function showPrs() {
       var username = document.querySelector('.js-username').value;
       if (username) {
