Add necessary meta tags and favicon. Skip filerev for favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Show My Pr's</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/assets/favicon.ico">
+
+  <!-- Open Graph Start -->
+  <meta property="og:title" content="showmyprs.com"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://showmyprs.com"/>
+  <meta property="og:image" content="https://showmyprs.com/assets/favicon.png"/>
+  <meta property="og:site_name" content="showmyprs.com"/>
+  <meta property="og:description" content="See all your Open Source contributions in one place."/>
+  <!-- Open Graph End -->
+
+  <!-- Twitter Card Start -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@geekykaran" />
+  <meta name="twitter:title" content="showmyprs.com" />
+  <meta name="twitter:description" content="See all your Open Source contributions in one place." />
+  <meta name="twitter:image" content="https://showmyprs.com/assets/favicon.png" />
+  <!-- Twitter Card End -->
+
   <!-- build:css(dist) /assets/styles/index.css -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/index.css">
   <!-- endbuild -->
