--- a/templates/user.html
+++ b/templates/user.html
@@ -104,5 +104,18 @@
     }(document, "script", "twitter-wjs"));
   </script>
   <!-- Twitter Widget Script End -->
+
+  <!-- Google Analytics Start -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-28477787-6', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!-- Google Analytics End -->
 </body>
 </html>
