Show last synced time for a user

--- a/assets/styles/user.css
+++ b/assets/styles/user.css
@@ -38,10 +38,18 @@ a {
   font-size: 16px;
   display: flex;
   margin-top: 10px;
+  justify-content: center;
+  width: 100%;
+  position: relative;
 }
 
-.details__stats span:first-child {
-    margin-right: 40px;
+.details__stats > span:first-child {
+  margin-right: 40px;
+}
+
+.detail__stats__time {
+  position: absolute;
+  right: 10px;
 }
 
 .repos {
