Change the hint direction

--- a/templates/user.html
+++ b/templates/user.html
@@ -53,7 +53,7 @@
         Total pull requests sent: {{ .TotalPrs }}
       </span>
       <span class="detail__stats__time">
-        Last synced: <span class="hint--bottom" aria-label="{{ .LastSyncedAtStringVerbose }}">{{ .LastSyncedAtString }}</span>
+        Last synced: <span class="hint--left" aria-label="{{ .LastSyncedAtStringVerbose }}">{{ .LastSyncedAtString }}</span>
       </span>
     </div>
   </div>
