Fix typo in tweet content

--- a/templates/user.html
+++ b/templates/user.html
@@ -31,14 +31,14 @@
 <body>
   <div class="details">
     <a class="details__username" target="_blank" rel="noopener nofollow" href="https://github.com/{{ .Username }}">@{{ .Username }}</a>
-    <a class="twitter-share-button" 
+    <a class="twitter-share-button"
       data-size="large"
       target="_blank"
-      rel="noopener nofollow" 
-      href="https://twitter.com/intent/tweet?text=🚀 Woah! I have sent {{ .TotalPrs }} pull requests to {{ .TotalRepos }} repos 🔥 See your open source contributions here 🤓&url=https://showmrprs.com&related=geekykaran,tweetifyio&hashtags=IHeartOSS"
+      rel="noopener nofollow"
+      href="https://twitter.com/intent/tweet?text=🚀 Woah! I have sent {{ .TotalPrs }} pull requests to {{ .TotalRepos }} repos 🔥 See your open source contributions here 🤓&url=https://showmyprs.com&related=geekykaran,tweetifyio&hashtags=IHeartOSS"
       data-text="🚀 Woah! I have sent {{ .TotalPrs }} pull requests to {{ .TotalRepos }} repos 🔥 See your open source contributions here 🤓"
       data-hashtags="IHeartOSS"
-      data-url="https://showmrprs.com"
+      data-url="https://showmyprs.com"
       data-related="geekykaran,tweetifyio"
     >
       Share it
