convert to lowercase before querying.
addresses https://github.com/karanjthakkar/showmyprs.com/issues/9

Signed-off-by: Venkata krishna Sundararajan <vkvenkat94@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
       }
     }
     function showPrs() {
-      var username = document.querySelector('.js-username').value;
+      var username = document.querySelector('.js-username').value.toLowerCase();
       if (username) {
         window.location = 'http://showmyprs.com/user/' + username;
       }
