--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
 <body>
   <span class="heading">Show My PR's</span>
   <span class="subheading">See all your Open Source contributions in one place</span>
-  <input class="username js-username" type="text" autofocus id="username" placeholder="Enter your Github username" onkeypress="handleKeypress(event)"/>
+  <input class="username js-username" type="text" autofocus id="username" placeholder="Enter your GitHub username" onkeypress="handleKeypress(event)"/>
   <button class="btn btn-primary" onclick="showPrs()">Show My Pr's</button>
-  <span class="madeBy">Made with ❤️ by <a href="https://twitter.com/geekykaran">geekykaran</a>. You can find the source on <a href="https://github.com/karanjthakkar/showmyprs.com">Github</a></span>
+  <span class="madeBy">Made with ❤️ by <a href="https://twitter.com/geekykaran">geekykaran</a>. You can find the source on <a href="https://github.com/karanjthakkar/showmyprs.com">GitHub</a></span>
   <script type="text/javascript">
     function handleKeypress(event) {
       if (
